[package]
authors = ["Austin Tindle <tindleaj@protonmail.com>"]
edition = "2018"
name = "ediscoin"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
chrono = {version = "0.4", features = ["serde"]}
hex = "0.4"
reqwest = {version = "0.10", features = ["blocking"]}
serde = {version = "1", features = ["derive"]}
serde_json = "1"
sha2 = "0.9"
